# qdrant

./: .env.example  .gitignore  README.md  chat_sessions.db  docker-compose.neo4j.yml  docker-compose.qdrant.yml  report.json  report.md  requirements.txt  research.json  temp.txt  upload_get_gcp.txt
agent/: README bang.md
agents/: README.md  pyproject.toml
agents/src/decision_crew/: crew.py  main.py
agents/src/decision_crew/config/: agents.yaml  tasks.yaml
agents/src/decision_crew/tools/: custom_tool.py
agents/tests/: app.py
app/api/: combine.py  combine_output.py  upload_data_pipeline.py
app/client/: app.py  chat_sessions.db  db.py  example.py  gui.py
data/clean/arsikom/: metadata_arsikom3_final_9c95a005.json
data/clean/logif/: metadata_920200419930811201_3_97040c00.json
data/clean/sisfor/: metadata_Sistem Informasi12_774064f4.json  metadata_Sistem Informasi1_b7cb938c.json  metadata_Sistem Informasi2_cae0a88e.json  metadata_Sistem Informasi8_c9e58121.json  metadata_Sistem_Informasi12_774064f4.json  metadata_Sistem_Informasi1_b7cb938c.json  metadata_Sistem_Informasi2_cae0a88e.json  metadata_Sistem_Informasi8_c9e58121.json
data/raw/logif/: slides_metadata.json  slides_metadata2.json
data/registry/: processed_pdf.json
pipelines/cognee/: create_knowledge.py  create_knowledge_img.py  inference.py  main.py  preprocessing.py
pipelines/cognee/utils/: check_processed_docs.py  describe_image_llm.py  extract_image_llm.py  pdf_converter.py  (+2 more)
pipelines/qdrant/: qdrant_utils.py
pipelines/twelve_labs/: inference.py  main.py  twelvelabs_utils.py
(+1 files in other folders)
