[project]
name = "decision_crew"
version = "0.1.0"
description = "decision_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.186.1,<1.0.0"
]

[project.scripts]
decision_crew = "decision_crew.main:run"
run_crew = "decision_crew.main:run"
train = "decision_crew.main:train"
replay = "decision_crew.main:replay"
test = "decision_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
